Add a scroll loading

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -163,7 +163,7 @@
 
       <!-- Overview -->
       <a id="nav-overview"></a>
-      <section class="case-overview" aria-labelledby="case-overview-title">
+      <section class="case-overview  reveal" aria-labelledby="case-overview-title">
         <div class="container case-overview__content">
           <!-- Left column -->
           <div class="case-overview__description">
@@ -204,7 +204,7 @@
       </section>
 
       <!-- Context -->
-      <section class="case-context" aria-labelledby="case-context-title">
+      <section class="case-context  reveal" aria-labelledby="case-context-title">
         <div class="container case-context__content">
           <h2 id="case-context-title" class="case-context__heading">
             A Canadian hospital approached us for a triage tool
@@ -252,12 +252,12 @@
       <a id="nav-solution"></a>
       <section class="case-howmightwe" aria-labelledby="case-howmightwe-title">
         <div class="container">
-          <h2 id="case-howmightwe-title" class="case-howmightwe__heading">
+          <h2 id="case-howmightwe-title" class="case-howmightwe__heading  reveal">
             How might we... help young patients and their caregivers navigate the ER experience?
           </h2>
 
           <!-- Image (unique block) -->
-          <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-1-title">
+          <section class="case-howmightwe__block  reveal" aria-labelledby="case-howmightwe-1-title">
             <h3 id="case-howmightwe-1-title" class="visually-hidden">
               Visual example: helping patients navigate the ER
             </h3>
@@ -271,7 +271,7 @@
           </section>
 
           <!-- Two columns: Research and approach (layout pattern) -->
-          <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-2-title">
+          <section class="case-howmightwe__block reveal" aria-labelledby="case-howmightwe-2-title">
             <div class="twocol twocol--wide">
               <h3 id="case-howmightwe-2-title" class="twocol__heading">
                 Research and approach
@@ -313,7 +313,7 @@
           </section>
 
           <!-- Goals for the app block -->
-          <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-3-title">
+          <section class="case-howmightwe__block  reveal" aria-labelledby="case-howmightwe-3-title">
             <div class="twocol twocol--wide">
               <h3 id="case-howmightwe-3-title" class="twocol__heading">
                 Goals for the app
@@ -368,7 +368,7 @@
           </section>
 
           <!-- Flow diagram-->
-          <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-4-title">
+          <section class="case-howmightwe__block reveal" aria-labelledby="case-howmightwe-4-title">
             <h3 id="case-howmightwe-4-title" class="visually-hidden">
               System-level flow for the triage intake process
             </h3>
@@ -382,7 +382,7 @@
           </section>
 
           <!-- Two columns: User flows & mapping -->
-          <section class="case-howmightwe__block case-howmightwe__block-margin-bottom-less" aria-labelledby="case-howmightwe-5-title">
+          <section class="case-howmightwe__block case-howmightwe__block-margin-bottom-less reveal" aria-labelledby="case-howmightwe-5-title">
             <div class="twocol twocol--wide">
               <h3 id="case-howmightwe-5-title" class="twocol__heading">
                 User flows &amp; feature<br>mapping
@@ -407,7 +407,7 @@
           </section>
 
           <!-- User flow diagram -->
-          <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-6-title">
+          <section class="case-howmightwe__block reveal" aria-labelledby="case-howmightwe-6-title">
             <h3 id="case-howmightwe-6-title" class="visually-hidden">
               Annotated user flow diagram for the triage experience
             </h3>
@@ -421,7 +421,7 @@
           </section>
 
           <!-- Two columns: Prototyping and testing -->
-          <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-7-title">
+          <section class="case-howmightwe__block reveal" aria-labelledby="case-howmightwe-7-title">
             <div class="twocol twocol--wide">
               <h3 id="case-howmightwe-7-title" class="twocol__heading">
                 Prototyping and testing
@@ -495,14 +495,14 @@
       <a id="nav-design"></a>
       <section class="case-highlights" aria-labelledby="case-highlights-title">
         <div class="container">
-          <h2 id="case-highlights-title" class="case-highlights__title">
+          <h2 id="case-highlights-title" class="case-highlights__title reveal">
             Design highlights
           </h2>
 
-          <div class="case-highlights__list">
+          <div class="case-highlights__list ">
 
             <!-- First sub-block -->
-            <article class="case-highlights__item">
+            <article class="case-highlights__item  reveal">
               <div class="case-highlights__visual">
                 <img 
                   src="../assets/images/Home - mobile.png" 
@@ -515,7 +515,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
               </div>
-              <div class="twocol twocol--wide twocol twocol--wide-mg40">
+              <div class="twocol twocol--wide twocol twocol--wide-mg40  reveal">
                 <h3 class="twocol__heading">Homepage</h3>
                 <div class="twocol__main">
                   <p>
@@ -529,7 +529,7 @@
             </article>
 
             <!-- Second sub-block -->
-            <article class="case-highlights__item">
+            <article class="case-highlights__item  reveal">
               <div class="case-highlights__visual">
                 <img 
                   src="../assets/images/Intro screen.png" 
@@ -542,7 +542,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
               </div>
-              <div class="twocol twocol--wide twocol--wide-mg40">
+              <div class="twocol twocol--wide twocol--wide-mg40 reveal">
                 <h3 class="twocol__heading">Intro screen</h3>
                 <div class="twocol__main">
                   <p>
@@ -559,7 +559,7 @@
             </article>
 
             <!-- Third sub-block -->
-            <article class="case-highlights__item">
+            <article class="case-highlights__item  reveal">
               <div class="case-highlights__visual">
                 <img 
                   src="../assets/images/QNR - How old are you.png" 
@@ -573,7 +573,7 @@
                 />
               </div>
               <div class="twocol twocol--wide twocol--wide-mg40">
-                <h3 class="twocol__heading">How old are you?</h3>
+                <h3 class="twocol__heading reveal">How old are you?</h3>
                 <div class="twocol__main">
                   <p>
                     During usability testing, the questions addressed to the user, like “How old are you?”, caused confusion for caregivers: they assumed it referred to their own age, not the child’s.
@@ -586,7 +586,7 @@
             </article>
 
             <!-- Fourth sub-block -->
-            <article class="case-highlights__item">
+            <article class="case-highlights__item  reveal">
               
              <!-- 🦊Creating a version for everwell-senior-solution -->
              <div class="case-highlights__item">
@@ -625,7 +625,7 @@
               </div>
             </div>
             <!-- 👍 End creating a version for everwell-senior-solution -->
-              <div class="twocol twocol--wide twocol--wide-mg40">
+              <div class="twocol twocol--wide twocol--wide-mg40 reveal">
                 <h3 class="twocol__heading">Getting results</h3>
                 <div class="twocol__main">
                   <p>
@@ -642,7 +642,7 @@
             </article>
 
             <!-- Fifth sub-block -->
-            <article class="case-highlights__item">
+            <article class="case-highlights__item reveal">
               <div class="case-highlights__visual">
                 <img 
                   src="../assets/images/Results - 3 card.png" 
@@ -650,7 +650,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large"
                 />
               </div>
-              <div class="twocol twocol--wide">
+              <div class="twocol twocol--wide reveal">
                 <h3 class="twocol__heading">Multiple patients</h3>
                 <div class="twocol__main">
                   <p>
@@ -671,11 +671,11 @@
       <!-- Collaboration and what's next (reusable two-column pattern) -->
       <a id="nav-impact"></a>
       <!-- 🦊 -->
-       <section class="case-howmightwe">
+       <section class="case-howmightwe reveal">
         <h2 class="case-highlights__title case-highlights__title-no-top-margin">Project impact</h2>
 
         <!-- Development collaboration -->
-        <div class="container">
+        <div class="container reveal">
           <div class="twocol add-big-margin-bottom">
             <h3 class="twocol__heading">Accuracy & adoption</h3>
             <div class="twocol__main">
@@ -683,7 +683,7 @@
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="container reveal">
           <div class="twocol add-big-margin-bottom">
             <h3 class="twocol__heading">Efficiency gains</h3>
             <div class="twocol__main">
@@ -691,7 +691,7 @@
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="container reveal">
           <div class="twocol">
             <h3 class="twocol__heading ">Design for scale and</br>inclusivity</h3>
             <div class="twocol__main">
@@ -705,11 +705,11 @@
       </section>
       <!-- 🦊end -->
        <a id="nav-learnings"></a>
-      <section class="case-howmightwe">
+      <section class="case-howmightwe reveal">
         <h2 class="case-highlights__title case-highlights__title-no-top-margin">Collaboration and what’s next</h2>
 
         <!-- Development collaboration -->
-        <div class="container">
+        <div class="container reveal">
           <div class="twocol">
             <h3 class="twocol__heading">Development<br>collaboration</h3>
             <div class="twocol__main">
@@ -744,7 +744,7 @@
           </div>
         </div>
         <!-- If continued -->
-        <div class="container">
+        <div class="container  reveal">
           <div class="twocol twocol--wide">
             <h3 class="twocol__heading">If continued…</h3>
             <div class="twocol__main">
@@ -758,7 +758,7 @@
               <p>This project solidified my confidence in independently leading complex, high-impact design work.</p>
 
               <!-- Leveraging AI -->
-                <div class="insight-card add-small-margin-bottom">
+                <div class="insight-card add-small-margin-bottom reveal">
                   <div class="insight-card__header">
                     <div class="icon-box icon-box-green">
                       <img
@@ -789,7 +789,7 @@
           </div>
         </div>
         <!-- Impact and learnings -->
-        <div class="container">
+        <div class="container  reveal">
           <div class="twocol twocol--wide">
             <h3 class="twocol__heading">Learnings</h3>
             <div class="twocol__main">
@@ -808,7 +808,7 @@
       
       </section>
       <!-- 🦊 next-prev buttons-->
-       <nav class="case-nav">
+       <nav class="case-nav  reveal">
         <div class="container">
           <a href="/everwell-senior-solution/" class="case-nav__btn case-nav__btn--next">
             Next case →
@@ -821,7 +821,7 @@
   
 
   <!-- Footer -->
-  <footer class="site-footer">
+  <footer class="site-footer  reveal">
     <div class="container site-footer__content">
       <div class="site-footer__left">
         <p class="site-footer__name">Michelle Pavlova</p>
