--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
   </aside>
 
-<section class="hero">
+<section class="hero reveal">
 	<div class="container">
 
 		<div class="hero__content">
@@ -138,7 +138,7 @@
         </div>
       </article>
 
-			<article class="work-card work-card--blue" aria-labelledby="work2-title" role="article">
+			<article class="work-card work-card--blue  reveal" aria-labelledby="work2-title" role="article">
         <a href="/everwell-senior-solution/" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
@@ -160,7 +160,7 @@
         </div>
       </article>
 
-			<article class="work-card work-card--yellow" aria-labelledby="work3-title" role="article">
+			<article class="work-card work-card--yellow  reveal" aria-labelledby="work3-title" role="article">
         <!-- <a href="" class="work-card__link" aria-label="Read more about Heritage4future"></a> -->
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/button-icon.svg" alt="" class="work-card__icon" />
