Fix bugs in scroll loading

--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <!-- Header -->
-    <header class="site-header">
+    <header class="site-header reveal">
 		<div class="container">
 			<a href="/" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
@@ -176,7 +176,7 @@
 </section>
 
     <!-- Footer -->
-    <footer class="site-footer">
+    <footer class="site-footer reveal">
   <div class="container site-footer__content">
 
     <div class="site-footer__left">
