--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
-  <header class="site-header">
+  <header class="site-header reveal">
 		<div class="container">
 			<a href="/" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
@@ -85,25 +85,25 @@
 <section class="hero reveal">
 	<div class="container">
 
-		<div class="hero__content">
+		<div class="hero__content reveal">
 			<p class="hero__greeting">Hi! I’m Michelle.</p>
 			<h1 class="hero__title">A Product Designer<br />& accessibility advocate.</h1>
-			<p class="hero__description">
+			<p class="hero__description reveal">
 				With experience across B2C, B2B, and SaaS projects and a visual media background, I design digital products that feel human, intuitive, and simple, even when the problems aren’t.
 			</p>
 	
-			<div class="hero__info">
-				<div class="hero__info-item">
+			<div class="hero__info reveal">
+				<div class="hero__info-item reveal">
 					<span class="hero__icon">💫</span>
 					<span class="hero__info-text">4 years of experience</span>
 				</div>
-				<div class="hero__info-item">
+				<div class="hero__info-item reveal">
 					<span class="hero__icon">📍</span>
 					<span class="hero__info-text">Vancouver, BC</span>
 				</div>
 			</div>
 	
-			<div class="hero__buttons">
+			<div class="hero__buttons reveal">
 				<a href="#selected-work" class="button button--primary">See my work</a>
 				<a href="/about/" class="button button--secondary">About me</a>
 			</div>
@@ -112,29 +112,27 @@
 </section>
 
 <section id="selected-work" class="selected-work">
-  <div class="container">
-    <h2 class="selected-work__title">Selected work</h2>
-    <div class="selected-work__cards">
-      <article class="work-card " aria-labelledby="work1-title" role="article">
+  <div class="container reveal">
+    <h2 class="selected-work__title reveal">Selected work</h2>
+    <div class="selected-work__cards reveal">
+      <article class="work-card reveal" aria-labelledby="work1-title" role="article">
         <a href="/horizon-children-hospital/" class="work-card__link" aria-label="Read more about Horizon Children's Hospital case study: Streamlining pediatric ER triage"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
         </span>
 
-        <div class="work-card-upper">
-          <h3 id="work1-title" class="work-card__title">Horizon Children's Hospital</h3>
+        <div class="work-card-upper reveal">
+          <h3 id="work1-title" class="work-card__title reveal">Horizon Children's Hospital</h3>
           <div class="work-card__text-block">
-            <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
-            <p class="work-card__description">
+            <p class="work-card__subtitle reveal">Streamlining pediatric ER triage with 92% accuracy</p>
+            <p class="work-card__description reveal">
               End-to-end design of a digital triage tool for a Canadian children’s hospital, aimed at reducing nurse burden and improving the ER experience for families.
             </p>
           </div>
         </div>
 
-
-
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_HCH_Title_V1.png" alt="Screenshot of the Everwell triage tool" class="work-card__image" />
+          <img src="./assets/images/Home_HCH_Title_V1.png" alt="Screenshot of the Horizon Children's Hospital tool" class="work-card__image reveal" />
         </div>
       </article>
 
@@ -156,7 +154,7 @@
 
 
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Everwell triage tool" class="work-card__image" />
+          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Everwell triage tool" class="work-card__image reveal" />
         </div>
       </article>
 
@@ -179,14 +177,14 @@
 
         <div class="work-card__image-wrapper">
           <img src="./assets/images/Home_Ukraine.png"
-					alt="Screenshot of the Everwell triage tool" class="work-card__image" />
+					alt="Screenshot of the Heritage4future project" class="work-card__image reveal" />
         </div>
       </article>
     </div>
   </div>
 </section>
 
-<footer class="site-footer">
+<footer class="site-footer reveal">
   <div class="container site-footer__content">
 
     <div class="site-footer__left">
