--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <!-- Header -->
-  <header class="site-header">
+  <header class="site-header reveal">
     <div class="container">
       <a href="/" class="logo">Michelle Pavlova</a>
       <nav class="site-nav">
@@ -79,7 +79,7 @@
   </aside>
 
 
-    <aside class="case-sidenav" id="case-sidenav">
+    <aside class="case-sidenav reveal" id="case-sidenav">
       <nav>
         <ul>
           <li><a href="#nav-overview">Overview</a></li>
@@ -94,14 +94,14 @@
     <!-- Main Case Content -->
     <main>
       <!-- Hero -->
-      <section class="case-hero" aria-labelledby="case-hero-title">
+      <section class="case-hero reveal" aria-labelledby="case-hero-title">
         <div class="container case-hero__content">
           <p class="case-hero__client">Horizon Children's Hospital</p>
-          <h1 class="case-hero__title" id="case-hero-title">
+          <h1 class="case-hero__title reveal" id="case-hero-title">
             Streamlining pediatric ER triage with<br />
             92% accuracy
           </h1>
-          <nav class="jump-menu" aria-label="Section navigation">
+          <nav class="jump-menu reveal" aria-label="Section navigation">
             <div class="jump-menu__card">
               <span class="jump-menu__title">Jump to:</span>
               <ul class="jump-menu__list">
@@ -148,7 +148,7 @@
       </section>
 
       <!-- Image block -->
-      <section class="case-image" aria-labelledby="case-image1-title">
+      <section class="case-image reveal" aria-labelledby="case-image1-title">
         <div class="container">
           <h2 id="case-image1-title" class="visually-hidden">Interface overview: triage workflow screen</h2>
           <figure class="case-image__wrapper">
@@ -163,10 +163,10 @@
 
       <!-- Overview -->
       <a id="nav-overview"></a>
-      <section class="case-overview  reveal" aria-labelledby="case-overview-title">
+      <section class="case-overview" aria-labelledby="case-overview-title">
         <div class="container case-overview__content">
           <!-- Left column -->
-          <div class="case-overview__description">
+          <div class="case-overview__description  reveal">
             <h2 id="case-overview-title" class="case-overview__heading">Project overview</h2>
             <p class="case-overview__paragraph">
               This case study covers the end-to-end design of a digital triage tool built for a Canadian children’s hospital.
@@ -182,7 +182,7 @@
             </aside>
           </div>
           <!-- Right column -->
-          <dl class="case-overview__meta">
+          <dl class="case-overview__meta reveal">
             <div class="case-overview__meta-item">
               <dt>Role</dt>
               <dd>Product Designer</dd>
@@ -210,20 +210,20 @@
             A Canadian hospital approached us for a triage tool
           </h2>
           <dl class="case-context__items">
-            <div class="case-context__item">
+            <div class="case-context__item reveal">
               <dt class="case-context__term">Problem</dt>
               <dd class="case-context__desc">
                 Canada’s healthcare system struggles with long ER wait times, often due to overworked staff. Triage nurses are stretched thin.
                 <strong>Introducing a digital intake tool could help prioritize patients more efficiently and allow nurses to focus on care.</strong>
               </dd>
             </div>
-            <div class="case-context__item">
+            <div class="case-context__item reveal">
               <dt class="case-context__term">Solution</dt>
               <dd class="case-context__desc">
                 We built a mobile- and tablet-first web tool that patients can access via a QR code upon arrival to the ER. It allows caregivers to complete a quick, guided assessment, receive clear instructions on where to go next and provides a natural language summary of the patient’s symptom for nurses to review.
               </dd>
             </div>
-            <div class="case-context__item">
+            <div class="case-context__item reveal">
               <dt class="case-context__term">Key contributions</dt>
               <dd class="case-context__desc">
                 <p>This was my first end-to-end design project as the sole designer. A big step after previously working under senior guidance!</p>
@@ -237,7 +237,7 @@
                 </ul>
               </dd>
             </div>
-            <div class="case-context__item">
+            <div class="case-context__item reveal">
               <dt class="case-context__term">Key impact</dt>
               <dd class="case-context__desc">
                 This digital ER triage tool helped improve intake accuracy by 92%, reduced manual screening load for nurses, and made the hospital’s emergency check-in process faster and easier for families.</br></br> Since it’s been designed to scale, it’s now being explored for use in multiple locations.
@@ -265,7 +265,7 @@
               <img 
                 src="../assets/images/1_How_might_we1.png" 
                 alt="Illustration showing how the triage tool helps patients navigate the ER"
-                class="case-howmightwe__image"
+                class="case-howmightwe__image reveal"
               />
             </figure>
           </section>
@@ -290,7 +290,7 @@
                     I also casually spoke with the parents I know about their experiences when taking children to the ER. (Ideally, I would’ve interviewed them in a more official manner, but due to the budget and timeline constraints of the project, I had to forgo the initial interview stage.)
                   </p>
                 </div>
-                <div class="icon-card">
+                <div class="icon-card reveal">
                   <div class="icon-card__header">
                     <span class="icon-box icon-box-green">
                       <img src="../assets/icons/circle-question-mark.svg" alt="" class="icon-box__icon" aria-hidden="true">
@@ -320,43 +320,43 @@
               </h3>
               <div class="twocol__main">
                 <ul class="goals-list">
-                  <li class=" goals-list__item goals-list__item-no-right-padding">
+                  <li class=" goals-list__item goals-list__item-no-right-padding reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/accessibility.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
                     <span class="goals-list__text"><strong>Accessible</strong> for users with disabilities</span>
                   </li>
-                  <li class="goals-list__item goals-list__item-no-right-padding">
+                  <li class="goals-list__item goals-list__item-no-right-padding reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/languages.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
                     <span class="goals-list__text"><strong>Bilingual (English/French)</strong> to support Canadian French-speaking population</span>
                   </li>
-                  <li class="goals-list__item goals-list__item-no-right-padding">
+                  <li class="goals-list__item goals-list__item-no-right-padding reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/smile.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
                     <span class="goals-list__text"><strong>Friendly and reassuring</strong> but not childish or immature</span>
                   </li>
-                  <li class="goals-list__item goals-list__item-no-right-padding">
+                  <li class="goals-list__item goals-list__item-no-right-padding reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/milestone.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
                     <span class="goals-list__text"><strong>Simple and intuitive</strong> to provide straightforward guidance for users who may be stressed out or in pain</span>
                   </li>
-                  <li class="goals-list__item goals-list__item-no-right-padding">
+                  <li class="goals-list__item goals-list__item-no-right-padding reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/log-in.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
                     <span class="goals-list__text">Designed for use <strong>without login or account creation</strong></span>
                   </li>
-                  <li class="goals-list__item goals-list__item-no-right-padding">
+                  <li class="goals-list__item goals-list__item-no-right-padding reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/file-edit.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
                     <span class="goals-list__text">Must allow users to <strong>revise previous answers easily</strong> (in case of mistakes or if the patient’s symptoms change)</span>
                   </li>
-                  <li class="goals-list__item goals-list__item-no-right-padding no-margin-bottom">
+                  <li class="goals-list__item goals-list__item-no-right-padding no-margin-bottom reveal">
                     <span class="icon-box icon-box-margin-left">
                       <img src="../assets/icons/tablet-smartphone.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                     </span>
@@ -376,7 +376,7 @@
               <img 
                 src="../assets/images/scheme.png" 
                 alt="User flow for a pediatric ER screener, showing steps from intro to triage questions, emergency alerts, and confirmation, with notes on accessibility and clarity."
-                class="case-howmightwe__image"
+                class="case-howmightwe__image reveal"
               />
             </figure>
           </section>
@@ -415,7 +415,7 @@
               <img 
                 src="../assets/images/user_flow.png" 
                 alt="User flow diagram showing key triage steps from landing screen to intake summary with decision paths" 
-                class="case-howmightwe__image"
+                class="case-howmightwe__image reveal"
               />
             </figure>
           </section>
@@ -441,7 +441,7 @@
                 </p>
 
                 <!-- Findings from children -->
-                <div class="insight-card">
+                <div class="insight-card reveal">
                   <div class="insight-card__header">
                     <div class="icon-box icon-box-green">
                       <img
@@ -462,7 +462,7 @@
                 </div>
 
                 <!-- Findings from parents -->
-                <div class="insight-card">
+                <div class="insight-card reveal">
                   <div class="insight-card__header">
                     <div class="icon-box icon-box-green">
                       <img
@@ -482,7 +482,7 @@
                   </ul>
                 </div>
 
-                <p>
+                <p class="reveal">
                   Based on these findings, I’ve updated the designs to address user frustrations. (I wish I had the time to run another batch of tests – but the turnaround time was tight! I tested internally to the best of my ability.)
                 </p>
               </div>
@@ -507,12 +507,12 @@
                 <img 
                   src="../assets/images/Home - mobile.png" 
                   alt="Homepage welcome screen with nurse and child illustration" 
-                  class="case-highlights__visual-image case-highlights__visual-image--wide"
+                  class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
                 />
                 <img 
                   src="../assets/images/Wait times modal.png" 
                   alt="Wait time modal with bear illustration explaining expectations" 
-                  class="case-highlights__visual-image case-highlights__visual-image--narrow"
+                  class="case-highlights__visual-image case-highlights__visual-image--narrow reveal"
                 />
               </div>
               <div class="twocol twocol--wide twocol twocol--wide-mg40  reveal">
@@ -534,12 +534,12 @@
                 <img 
                   src="../assets/images/Intro screen.png" 
                   alt="Intro screen explaining the purpose of the screener with illustrated parent and child" 
-                  class="case-highlights__visual-image case-highlights__visual-image--wide"
+                  class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
                 />
                 <img 
                   src="../assets/images/Exit modal.png" 
                   alt="Exit confirmation modal asking the user to confirm before leaving the screener" 
-                  class="case-highlights__visual-image case-highlights__visual-image--narrow"
+                  class="case-highlights__visual-image case-highlights__visual-image--narrow reveal"
                 />
               </div>
               <div class="twocol twocol--wide twocol--wide-mg40 reveal">
@@ -564,12 +564,12 @@
                 <img 
                   src="../assets/images/QNR - How old are you.png" 
                   alt="Screen showing patient age selection with a helper note explaining to fill the form as if you are the patient" 
-                  class="case-highlights__visual-image case-highlights__visual-image--wide"
+                  class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
                 />
                 <img 
                   src="../assets/images/QNR - Is this for an injury.png" 
                   alt="Screen with injury-related question showing Yes and No radio buttons" 
-                  class="case-highlights__visual-image case-highlights__visual-image--wide"
+                  class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
                 />
               </div>
               <div class="twocol twocol--wide twocol--wide-mg40">
@@ -596,7 +596,7 @@
                   <img
                     src="../assets/images/Results - 1 card.png"
                     alt="Results screen showing a summary card with instructions, patient status, and a button to update symptoms or add new patient"
-                    class="case-highlights__visual-image case-highlights__visual-image--wide" />
+                    class="case-highlights__visual-image case-highlights__visual-image--wide reveal" />
                 </div>
                 <div class="case-highlights__visual-col case-highlights__visual-col--right">
                   <!-- cards -->
@@ -618,7 +618,7 @@
                 
                     <!-- 2. Feature widget card -->
                     <!-- <div class="case-widget-card case-widget-card_no-background"> -->
-                      <img class="case-widget-card case-widget-card--no-padding case-widget-card_no-background" src="../assets/images/Select patient dropdown.png" alt="Image of a card showing the process of selecting patients" class="case-widget-card__feature-img" />
+                      <img class="case-widget-card case-widget-card--no-padding case-widget-card_no-background reveal" src="../assets/images/Select patient dropdown.png" alt="Image of a card showing the process of selecting patients" class="case-widget-card__feature-img" />
                     <!-- </div> -->
 
                 </div>
@@ -647,7 +647,7 @@
                 <img 
                   src="../assets/images/Results - 3 card.png" 
                   alt="Scrollable results page showing multiple summary cards for different patients with age and navigation indicators" 
-                  class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large"
+                  class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large reveal"
                 />
               </div>
               <div class="twocol twocol--wide reveal">
@@ -715,25 +715,25 @@
             <div class="twocol__main">
               <p>To help aid the development process, I:</p>
               <ul class="goals-list">
-                <li class="goals-list__item">
+                <li class="goals-list__item reveal">
                   <span class="icon-box" aria-hidden="true">
                     <img src="../assets/icons/pen-tool.svg" alt="" class="icon-box__icon" width="24" height="24" />
                   </span>
                   <span><strong>Wrote detailed annotations in Figma</strong></span>
                 </li>
-                <li class="goals-list__item">
+                <li class="goals-list__item reveal">
                   <span class="icon-box" aria-hidden="true">
                     <img src="../assets/icons/list.svg" alt="" class="icon-box__icon" width="24" height="24" />
                   </span>
                   <span><strong>Co-created acceptance criteria with the PM on the project</strong></span>
                 </li>
-                <li class="goals-list__item">
+                <li class="goals-list__item reveal">
                   <span class="icon-box" aria-hidden="true">
                     <img src="../assets/icons/thumbs-up.svg" alt="" class="icon-box__icon" width="24" height="24" />
                   </span>
                   <span><strong>Maintained open lines with the dev team for feedback and clarification</strong></span>
                 </li>
-                <li class="goals-list__item add-big-margin-bottom">
+                <li class="goals-list__item add-big-margin-bottom reveal">
                   <span class="icon-box" aria-hidden="true">
                     <img src="../assets/icons/accessibility.svg" alt="" class="icon-box__icon" width="24" height="24" />
                   </span>
