Fix the unsticky footer in the About page

--- a/about/index.html
+++ b/about/index.html
@@ -79,101 +79,103 @@
 		</nav>
 	</aside>
 
-    <!-- About Section -->
-    
-  <section class="about-hero">
-		<div class="container about-hero__content">
-			
-			<div class="about-hero__image-block">
-				<img 
-					id="portrait"
-					src="../assets/images/portrait.jpg" 
-					alt="Portrait of Michelle Pavlova" 
-					class="about-hero__image"
-				/>
-				<p class="about-hero__caption">
-					Fashion is one of my favourite hobbies – click on my photo to see a random look I’ve styled!
-				</p>
+	<main>
+		<!-- About Section -->
+
+		<section class="about-hero">
+			<div class="container about-hero__content">
+				
+				<div class="about-hero__image-block">
+					<img 
+						id="portrait"
+						src="../assets/images/portrait.jpg" 
+						alt="Portrait of Michelle Pavlova" 
+						class="about-hero__image"
+					/>
+					<p class="about-hero__caption">
+						Fashion is one of my favourite hobbies – click on my photo to see a random look I’ve styled!
+					</p>
+				</div>
+
+				<div class="about-hero__text-block">
+					<h1 class="about-hero__heading">Hello again! I’m Michelle.</h1>
+
+					<p class="about-hero__intro">
+						Product Designer based near Vancouver, BC, with four years of experience crafting digital products for consumers and B2B.
+					</p>
+
+					<div class="about-hero__paragraphs">
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">💫</div>
+							<p class="about-hero__text">
+								<strong>I specialize in navigating complexity and ambiguity</strong>
+								to create intuitive, inclusive, and high-impact solutions. After several years in Health Tech, I’m excited to explore new industries where thoughtful design can make a difference.
+							</p>
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">👧</div>
+							<p class="about-hero__text">
+								<strong>My design journey started when I was a little girl</strong>
+								who wanted to create websites about Disney princesses. I wasn’t allowed much screen time, so I drew each page on paper and asked people to “click” on links by turning to the next drawing. I didn’t know it then, but I was doing paper prototyping. I’ve been hooked on creating digital experiences ever since!
+							</p>
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">🎨</div>
+							<p class="about-hero__text">
+								Today, I still bring that same <strong>joy, curiosity, and heart to my work, along with a structured, systems-minded approach</strong> shaped by my Illustration Honours degree and deepened through my work in product teams. Some of my favourite things are accessibility, collaboration, and continuous learning.
+							</p>
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">🐈</div>
+							<p class="about-hero__text">
+								<strong>When I’m not designing</strong>, I’m usually 
+								<span class="hover-preview">
+									<span class="hover-preview__text">out walking</span>
+									<img src="../assets/images/about_walking.png" alt="Me, on a walk" class="hover-preview__img">
+								</span> 
+								with a 
+								<span class="hover-preview">
+									<span class="hover-preview__text">matcha</span>
+									<img src="../assets/images/about_matcha.png" alt="Cup of matcha" class="hover-preview__img">
+								</span> 
+								(or hojicha, or chai…). I also love 
+								<span class="hover-preview">
+									<span class="hover-preview__text">thrifting</span>
+									<img src="../assets/images/about_thrifthing.png" alt="A thrift find" class="hover-preview__img">
+								</span>, 
+								<span class="hover-preview">
+									<span class="hover-preview__text">a plot-driven videogame</span>
+									<img src="../assets/images/about_videoGames.png" alt="A picture of Elly from The Last of Us" class="hover-preview__img">
+								</span>, 
+								and hanging out with my 
+								<span class="hover-preview">
+									<span class="hover-preview__text">very round British Shorthair</span>
+									<img src="../assets/images/about_cat.png" alt="A picture of my cat" class="hover-preview__img">
+								</span>.
+							</p>
+
+						</div>
+
+						<div class="about-hero__item">
+							<div class="about-hero__icon">📨</div>
+							<p class="about-hero__text">
+								<strong>Feel free to reach out</strong> at 
+								<a href="mailto:hi@michelledesign.ca" class="about-email">hi@michelledesign.ca</a> 
+								to talk about all things design or collaborate on a cool project together!
+							</p>
+						</div>
+
+					</div>
+
+				</div>
+
 			</div>
-
-			<div class="about-hero__text-block">
-				<h1 class="about-hero__heading">Hello again! I’m Michelle.</h1>
-
-				<p class="about-hero__intro">
-					Product Designer based near Vancouver, BC, with four years of experience crafting digital products for consumers and B2B.
-				</p>
-
-				<div class="about-hero__paragraphs">
-
-					<div class="about-hero__item">
-						<div class="about-hero__icon">💫</div>
-						<p class="about-hero__text">
-							<strong>I specialize in navigating complexity and ambiguity</strong>
-							to create intuitive, inclusive, and high-impact solutions. After several years in Health Tech, I’m excited to explore new industries where thoughtful design can make a difference.
-						</p>
-					</div>
-
-					<div class="about-hero__item">
-						<div class="about-hero__icon">👧</div>
-						<p class="about-hero__text">
-							<strong>My design journey started when I was a little girl</strong>
-							who wanted to create websites about Disney princesses. I wasn’t allowed much screen time, so I drew each page on paper and asked people to “click” on links by turning to the next drawing. I didn’t know it then, but I was doing paper prototyping. I’ve been hooked on creating digital experiences ever since!
-						</p>
-					</div>
-
-					<div class="about-hero__item">
-						<div class="about-hero__icon">🎨</div>
-						<p class="about-hero__text">
-							Today, I still bring that same <strong>joy, curiosity, and heart to my work, along with a structured, systems-minded approach</strong> shaped by my Illustration Honours degree and deepened through my work in product teams. Some of my favourite things are accessibility, collaboration, and continuous learning.
-						</p>
-					</div>
-
-					<div class="about-hero__item">
-						<div class="about-hero__icon">🐈</div>
-						<p class="about-hero__text">
-							<strong>When I’m not designing</strong>, I’m usually 
-							<span class="hover-preview">
-								<span class="hover-preview__text">out walking</span>
-								<img src="../assets/images/about_walking.png" alt="Me, on a walk" class="hover-preview__img">
-							</span> 
-							with a 
-							<span class="hover-preview">
-								<span class="hover-preview__text">matcha</span>
-								<img src="../assets/images/about_matcha.png" alt="Cup of matcha" class="hover-preview__img">
-							</span> 
-							(or hojicha, or chai…). I also love 
-							<span class="hover-preview">
-								<span class="hover-preview__text">thrifting</span>
-								<img src="../assets/images/about_thrifthing.png" alt="A thrift find" class="hover-preview__img">
-							</span>, 
-							<span class="hover-preview">
-								<span class="hover-preview__text">a plot-driven videogame</span>
-								<img src="../assets/images/about_videoGames.png" alt="A picture of Elly from The Last of Us" class="hover-preview__img">
-							</span>, 
-							and hanging out with my 
-							<span class="hover-preview">
-								<span class="hover-preview__text">very round British Shorthair</span>
-								<img src="../assets/images/about_cat.png" alt="A picture of my cat" class="hover-preview__img">
-							</span>.
-						</p>
-
-					</div>
-
-					<div class="about-hero__item">
-						<div class="about-hero__icon">📨</div>
-						<p class="about-hero__text">
-							<strong>Feel free to reach out</strong> at 
-							<a href="mailto:hi@michelledesign.ca" class="about-email">hi@michelledesign.ca</a> 
-							to talk about all things design or collaborate on a cool project together!
-						</p>
-					</div>
-
-</div>
-
-			</div>
-
-		</div>
-</section>
+		</section>
+	</main>
 
     <!-- Footer -->
     <footer class="site-footer reveal">
