--- a/about/index.html
+++ b/about/index.html
@@ -199,7 +199,7 @@
       </div>
 
       <div class="site-footer__column">
-        <h4 class="site-footer__heading">Contact</h4>
+        <h4 class="site-footer__heading">Contacts</h4>
         <ul class="site-footer__list">
           <li>
 						<a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener">
