Add content to case3

--- a/index.html
+++ b/index.html
@@ -154,18 +154,18 @@
 
 
         <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Everwell triage tool" class="work-card__image reveal" />
+          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Everwell PROMs and trends" class="work-card__image reveal" />
         </div>
       </article>
 
 			<article class="work-card work-card--yellow  reveal" aria-labelledby="work3-title" role="article">
-        <!-- <a href="" class="work-card__link" aria-label="Read more about Heritage4future"></a> -->
+        <a href="/everwell-PROMs-and-trends/" class="work-card__link" aria-label="Read more about Everwell PROMs and trends"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/button-icon.svg" alt="" class="work-card__icon" />
         </span>
 
         <div class="work-card-upper">
-            <h3 id="work3-title" class="work-card__title work-card__title--yellow">Heritage4future</h3>
+            <h3 id="work3-title" class="work-card__title work-card__title--yellow">Everwell PROMs and trends</h3>
             <div class="work-card__text-block">
               <p class="work-card__subtitle">Coming soon: Improving impact through storytelling</p>
               <p class="work-card__description">
