Add content to case3

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -84,7 +84,7 @@
         <ul>
           <li><a href="#nav-overview">Overview</a></li>
           <li><a href="#nav-solution">Solution</a></li>
-          <li><a href="#nav-design">Design</a></li>
+          <li><a href="#nav-design">Designs</a></li>
           <li><a href="#nav-impact">Impact</a></li>
           <li><a href="#nav-learnings">Learnings</a></li>
         </ul>
