Add animation to Home screen

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <!-- 🦊 A First new card -->
      <!-- Case1: everwell-PROMs-and-trends -->
-      <article class="case-card">
+      <article class="case-card reveal">
         <a href="/everwell-PROMs-and-trends/" class="case-card__link">
           <div class="case-card__inner">
 
@@ -178,7 +178,7 @@
             </div>
 
             <!-- Right side -->
-           <div class="case-card__visual">
+           <div class="case-card__visual reveal">
             <img src="./assets/images/home1.png" alt="Patient trends chart" class="case-card__image" />
           </div>
 
@@ -233,10 +233,10 @@
             </div>
 
             <!-- Right side -->
-            <div class="case-card__visual case-card__visual-2">
+            <div class="case-card__visual case-card__visual-2 ">
               <div class="case-card__phones">
-                <img src="./assets/images/home2_1.png" alt="" class="case-card__phone case-card__phone--up" />
-                <img src="./assets/images/home2_2.png" alt="" class="case-card__phone case-card__phone--down" />
+                <img src="./assets/images/home2_1.png" alt="" class="case-card__phone case-card__phone--up reveal" />
+                <img src="./assets/images/home2_2.png" alt="" class="case-card__phone case-card__phone--down reveal" />
               </div>
             </div>
 
