Fixed the bug with animation on the scroll adaptive, second card on Home page

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             </div>
 
             <!-- Right side -->
-           <div class="case-card__visual reveal">
-            <img src="./assets/images/home1.png" alt="Patient trends chart" class="case-card__image" />
+           <div class="case-card__visual">
+            <img src="./assets/images/home1.png" alt="Patient trends chart" class="case-card__image image-animate" />
           </div>
 
           </div>
@@ -235,8 +235,8 @@
             <!-- Right side -->
             <div class="case-card__visual case-card__visual-2 ">
               <div class="case-card__phones">
-                <img src="./assets/images/home2_1.png" alt="" class="case-card__phone case-card__phone--up reveal" />
-                <img src="./assets/images/home2_2.png" alt="" class="case-card__phone case-card__phone--down reveal" />
+                <img src="./assets/images/home2_1.png" alt="" class="case-card__phone case-card__phone--up phone-animate" />
+                <img src="./assets/images/home2_2.png" alt="" class="case-card__phone case-card__phone--down phone-animate" />
               </div>
             </div>
 
