--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             <!-- Right side -->
            <div class="case-card__visual">
-            <img src="./assets/images/home1.png" alt="Patient trends chart" class="case-card__image image-animate" />
+            <img src="./assets/images/home1.png" alt="Patient trends chart" class="case-card__image case-card__image-sq image-animate" />
           </div>
 
           </div>
@@ -246,74 +246,121 @@
       </article>
       <!-- 😎 The end of the Second new card -->
 
-    </div>
-      <!-- </section> -->
+     <!-- 😑Case3: everwell-senior-solution -->
+      <article class="case-card">
+        <a href="/everwell-senior-solution/" class="case-card__link">
+          <div class="case-card__inner">
 
-      <article class="work-card reveal" aria-labelledby="work1-title" role="article">
-        <a href="/horizon-children-hospital/" class="work-card__link" aria-label="Read more about Horizon Children's Hospital case study: Streamlining pediatric ER triage"></a>
-        <span class="work-card__icon-abs" aria-hidden="true">
-          <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
-        </span>
+            <!-- Left side -->
+            <div class="case-card__text">
+              <div class="case-card__top">
+                <h3 class="case-card__company">EVERWELL</h3>
+                <h2 class="case-card__title">
+                  Redesigning a seniors' health app for clarity and engagement
+                </h2>
+                <p class="case-card__description">
+                  Transformed a basic MVP into a full-featured wellness platform, creating a more intuitive, accessible experience tailored to older users.
+                </p>
+              </div>
 
-        <div class="work-card-upper reveal">
-          <h3 id="work1-title" class="work-card__title reveal">Horizon Children's Hospital</h3>
-          <div class="work-card__text-block">
-            <p class="work-card__subtitle reveal">Streamlining pediatric ER triage with 92% accuracy</p>
-            <p class="work-card__description reveal">
-              End-to-end design of a digital triage tool for a Canadian children’s hospital, aimed at reducing nurse burden and improving the ER experience for families.
-            </p>
+              <!-- Styled like a button but not a second link -->
+               <span class="button button--secondary case-card__button">
+                Get the full story →
+              </span>
+
+              <!-- Stats -->
+              <div class="case-card__stats">
+                <div class="case-stat">
+                  <div class="case-stat__icon">
+                    <img src="./assets/icons/check-circle.svg" alt="" />
+                  </div>
+                  <div class="case-stat__text">
+                    <p class="case-stat__text-bold">+ 30%</p>
+                    <p>task completion</p>
+                  </div>
+                </div>
+                <div class="case-stat">
+                  <div class="case-stat__icon">
+                    <img src="./assets/icons/star_blue.svg" alt="" />
+                  </div>
+                  <div class="case-stat__text">
+                    <p class="case-stat__text-bold">86% of users</p>
+                    <p>preferred new design</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Right side -->
+            <div class="case-card__visual">
+              <div class="case-card__phones">
+                <img src="./assets/images/home4_1.png" alt="" class="case-card__phone case-card__phone--up phone-animate" />
+                <img src="./assets/images/home4_2.png" alt="" class="case-card__phone case-card__phone--down phone-animate" />
+              </div>
+            </div>
+
+
           </div>
-        </div>
-
-        <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_HCH_Title_V1.png" alt="Screenshot of the Horizon Children's Hospital tool" class="work-card__image reveal" />
-        </div>
+        </a>
       </article>
+      <!-- 😑 The end of the Third new card -->
 
-			<article class="work-card work-card--blue  reveal" aria-labelledby="work2-title" role="article">
-        <a href="/everwell-senior-solution/" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
-        <span class="work-card__icon-abs" aria-hidden="true">
-          <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
-        </span>
+        <!-- 😜 A Fourth new card: InterviewR -->
+     <!-- Case1: everwell-PROMs-and-trends -->
+      <article class="case-card reveal">
+        <!-- <a href="" class="case-card__link"> -->
+          <div class="case-card__inner">
 
-        <div class="work-card-upper">
-            <h3 id="work2-title" class="work-card__title work-card__title--blue">Everwell</h3>
-            <div class="work-card__text-block">
-              <p class="work-card__subtitle">Redesigning a seniors' health app for clarity and engagement</p>
-              <p class="work-card__description">
-                Transformed a basic MVP into a full-featured wellness platform, creating a more intuitive, accessible experience tailored to older users.
-              </p>
+            <!-- Left side -->
+            <div class="case-card__text">
+              <div class="case-card__top">
+                <h3 class="case-card__company case-card__company-pink">Interviewr</h3>
+                <h2 class="case-card__title">
+                  Leveraging AI for effortless hiring
+                </h2>
+                <p class="case-card__description">
+                  InterviewR is an AI-powered hiring platform I’m currently designing to make interviews smarter and better and save hiring managers time.
+                </p>
+              </div>
+
+              <!-- Styled like a button but not a second link -->
+               <span class="button button--secondary case-card__button case-card__button-nonactive">
+                Full case study coming soon
+              </span>
+
+              <!-- Stats -->
+              <div class="case-card__stats">
+                <div class="case-stat">
+                  <div class="case-stat__icon">
+                    <img src="./assets/icons/zap.svg" alt="" />
+                  </div>
+                  <div class="case-stat__text">
+                    <p class="case-stat__text-bold">60% faster</p>
+                    <p>trend identification</p>
+                  </div>
+                </div>
+                <div class="case-stat">
+                  <div class="case-stat__icon">
+                    <img src="./assets/icons/trending-up.svg" alt="" />
+                  </div>
+                  <div class="case-stat__text">
+                    <p class="case-stat__text-bold">72% increase</p>
+                    <p>in health tracking motivation</p>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
 
+            <!-- Right side -->
+           <div class="case-card__visual case-card__visual--gradient">
+            <img src="./assets/images/Logo.png" alt="Company's logo" class="case-card__image case-card__image-logo image-animate" />
+          </div>
 
-        <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_Everwell.png" alt="Screenshot of the Everwell PROMs and trends" class="work-card__image reveal" />
-        </div>
+          </div>
+        <!-- </a> -->
       </article>
+       <!-- 😜 The end of the Fourth new card -->
 
-			<article class="work-card work-card--yellow  reveal" aria-labelledby="work3-title" role="article">
-        <a href="/everwell-PROMs-and-trends/" class="work-card__link" aria-label="Read more about Everwell PROMs and trends"></a>
-        <span class="work-card__icon-abs" aria-hidden="true">
-          <img src="./assets/icons/button-icon.svg" alt="" class="work-card__icon" />
-        </span>
-
-        <div class="work-card-upper">
-            <h3 id="work3-title" class="work-card__title work-card__title--yellow">Everwell PROMs and trends</h3>
-            <div class="work-card__text-block">
-              <p class="work-card__subtitle">Coming soon: Improving impact through storytelling</p>
-              <p class="work-card__description">
-                Redesigned a donation-based charity website to strengthen narrative, leading to a 31% rise in unique visitors and over $70,000 raised in the next campaign cycle.
-              </p>
-            </div>
-        </div>
-
-
-        <div class="work-card__image-wrapper">
-          <img src="./assets/images/Home_Ukraine.png"
-					alt="Screenshot of the Heritage4future project" class="work-card__image reveal" />
-        </div>
-      </article>
     </div>
   </div>
 </section>
