Fix the footer styling on home page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li>
 						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
 							Resume
-							<img src="./assets/icons/external-link.svg" alt="" class="icon" />
+							<img src="./assets/icons/external-link-wh.svg" alt="" class="icon" />
 						</a>
 					</li>
 				</ul>
@@ -373,6 +373,8 @@
     </div>
   </div>
 </section>
+<div class="hero-spacer"></div>
+
 
 <footer class="site-footer reveal">
   <div class="container site-footer__content">
@@ -400,13 +402,13 @@
           <li>
 						<a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener">
 							LinkedIn
-							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+							<img src="./assets/icons/external-link-white.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
           <li>
 						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
 							Resume
-							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+							<img src="./assets/icons/external-link-white.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
         </ul>
