Fix the size and add the rotation to a flower in the greeting in the hero section  in Home

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="hero-left">
             <div class="hero__content_greeting-full">
               <p class="hero__greeting">Hi! I’m Michelle.</p> 
-              <img src="./assets/icons/flower.svg" alt="" class="work-card__icon" />
+              <img src="./assets/icons/flower.svg" alt="" class="hero__flower" />
             </div>
           
            <h1 class="hero__title">
