Fix the nex prev buttons in cases

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -807,16 +807,20 @@
         </div>
       
       </section>
-      <!-- 🦊 next-prev buttons-->
-       <nav class="case-nav  reveal">
-        <div class="container">
-          <a href="/everwell-senior-solution/" class="case-nav__btn case-nav__btn--next">
-            Next case →
-          </a>
-        </div>
-      </nav>
 
-      <!-- 🦊end  -->
+          <!-- 🦊prev/next buttons -->
+         <nav class="case-nav reveal">
+          <div class="container">
+            <a href="/everwell-PROMs-and-trends/" class="case-nav__btn case-nav__btn--prev">
+              ← Previous case
+            </a>
+            <!-- keep Next hidden until case3 exists -->
+            <a href="/everwell-senior-solution/" class="case-nav__btn case-nav__btn--next" aria-hidden="true">
+              Next case →
+            </a>
+          </div>
+        </nav>
+        <!-- 🦊end of prev/next buttons -->
     </main>
   
 
