--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -681,19 +681,17 @@
             </dl>
           </div>
         </section>
-        <!-- 🦊prev/next buttons -->
-         <nav class="case-nav reveal">
-          <div class="container">
-            <a href="/horizon-children-hospital/" class="case-nav__btn case-nav__btn--prev">
-              ← Previous case
-            </a>
-            <!-- keep Next hidden until case3 exists -->
-            <a href="#" class="case-nav__btn case-nav__btn--next case-nav__btn--hidden" aria-hidden="true">
-              Next case →
-            </a>
-          </div>
-        </nav>
-        <!-- 🦊end of prev/next buttons -->
+     
+         <!-- 🦊 next-prev buttons-->
+       <nav class="case-nav  reveal">
+        <div class="container">
+          <a href="/horizon-children-hospital/" class="case-nav__btn case-nav__btn--next">
+            Next case →
+          </a>
+        </div>
+      </nav>
+
+      <!-- 🦊end  -->
   </main>
 <!-- Footer -->
   <footer class="site-footer">
