--- a/index.html
+++ b/index.html
@@ -416,6 +416,9 @@
 
   </div>
 </footer>
+  <button id="backToTop" class="back-to-top" aria-label="Back to top">
+    <svg viewBox="0 0 24 24" width="28" height="28"><path d="M12 19V5M5 12l7-7 7 7" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
+  </button>
   <script src="./scripts/main.js" defer></script>
 </body>
 </html>
