Round corners in big images in case1

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -145,7 +145,7 @@
       <section class="case-image reveal" aria-labelledby="case-image1-title">
         <div class="container">
           <h2 id="case-image1-title" class="visually-hidden">Hero mockup for project</h2>
-          <figure class="case-image__wrapper">
+          <figure class="case-image__wrapper case-image__wrapper-top">
             <img 
               src="../assets/images/Trends_Top_Of_Page.gif"
               alt="Project hero screen, desktop and mobile"
@@ -402,7 +402,7 @@
                   <img
                     src="../assets/images/3_2.png"
                     alt="an image of the notification card"
-                    class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
+                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
               </div>
             </article>
             <div class="twocol twocol--wide reveal">
@@ -431,7 +431,7 @@
                 <img
                   src="../assets/images/3_3.png"
                   alt="Screenshot of the main feature"
-                  class="case-highlights__visual-image case-highlights__visual-image--large reveal"
+                  class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large reveal"
                 />
 
                 <!-- Two cards row -->
@@ -477,7 +477,7 @@
                 <img
                   src="../assets/images/Patient_profile.gif"
                   alt="Screenshot of the main feature"
-                  class="case-highlights__visual-image case-highlights__visual-image--large reveal"
+                  class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large reveal"
                 />
 
                 <!-- Two cards row -->
@@ -518,7 +518,7 @@
                   <img
                     src="../assets/images/Patient_trends.gif"
                     alt="an image of the notification card"
-                    class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
+                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
                 </div>
               </article>
             
@@ -537,7 +537,7 @@
                   <img
                     src="../assets/images/3_6.png"
                     alt="an image of the notification card"
-                    class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
+                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
                 </div>
               </article>
             
