Fix link in the first case page to Work

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -26,7 +26,7 @@
       <nav class="site-nav">
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="#selected-work" class="active">Work</a></li>
+          <li><a href="../#selected-work" class="active">Work</a></li>
           <li><a href="/about/">About</a></li>
           <li>
             <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
