Add animation on hover over the top menu items

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
       <!-- 😎Case2: Horizon Children's Hospital -->
         <article class="case-card">
-          <a href="/horizon-children-hospital/" class="case-card__link">
+          <a href="/horizon-children-hospital/" class="case-card__link case-card__link-other-color">
             <div class="case-card__inner">
 
               <!-- Left side -->
